src/main/js/math/artclod_txt2mathml.js
if(!ARTC){
    var ARTC = {};
}

ARTC.txt2MathML = (function() {
    /*
     * Generated by PEG.js 0.8.0.
     *
     * http://pegjs.majda.cz/
     */

    function peg$subclass(child, parent) {
      function ctor() { this.constructor = child; }
      ctor.prototype = parent.prototype;
      child.prototype = new ctor();
    }

    function SyntaxError(message, expected, found, offset, line, column) {
      this.message  = message;
      this.expected = expected;
      this.found    = found;
      this.offset   = offset;
      this.line     = line;
      this.column   = column;

      this.name     = "SyntaxError";
    }

    peg$subclass(SyntaxError, Error);

    function parse(input) {
      var options = arguments.length > 1 ? arguments[1] : {},

          peg$FAILED = {},

          peg$startRuleFunctions = { start: peg$parsestart },
          peg$startRuleFunction  = peg$parsestart,

          peg$c0 = peg$FAILED,
          peg$c1 = function(v) { return '<math xmlns="http://www.w3.org/1998/Math/MathML"> ' + v + ' </math>'; },
          peg$c2 = null,
          peg$c3 = [],
          peg$c4 = function(s, v) { s1=(s? s: ""); for(var r=s1,i=0;i<v.length;i++){ r = v[i](r); }; return r;},
          peg$c5 = "+",
          peg$c6 = { type: "literal", value: "+", description: "\"+\"" },
          peg$c7 = function(v) { return (function(a){return "<apply> <plus/> " + (a ? a + " " : "") + v + " </apply>";}) ;},
          peg$c8 = "-",
          peg$c9 = { type: "literal", value: "-", description: "\"-\"" },
          peg$c10 = function(v) { return (function(a){return "<apply> <minus/> " + (a ? a + " " : "") + v + " </apply>";}) ;},
          peg$c11 = function(s, v) { for(var r=s,i=0;i<v.length;i++){ r = v[i](r); }; return r;},
          peg$c12 = "*",
          peg$c13 = { type: "literal", value: "*", description: "\"*\"" },
          peg$c14 = function(v) { return (function(a){return "<apply> <times/> " + a + " " + v + " </apply>";}) ;},
          peg$c15 = "/",
          peg$c16 = { type: "literal", value: "/", description: "\"/\"" },
          peg$c17 = function(v) { return (function(a){return "<apply> <divide/> " + a + " " + v + " </apply>";}) ;},
          peg$c18 = function(n, s, v) { 
              var t = (v ? v(s) : s); 
              return (n ? "<apply> <minus/> " + t  + " </apply>" : t);
            },
          peg$c19 = "^",
          peg$c20 = { type: "literal", value: "^", description: "\"^\"" },
          peg$c21 = function(n, v) { 
              var pre = (n ? "<apply> <minus/> " : "" );
              var post = (n ? " </apply>" : "" );
              return (function(a){return "<apply> <power/> " + a + " " + pre + v + post + " </apply>";}) ;
            },
          peg$c22 = function(s) { return s; },
          peg$c23 = "(",
          peg$c24 = { type: "literal", value: "(", description: "\"(\"" },
          peg$c25 = ")",
          peg$c26 = { type: "literal", value: ")", description: "\")\"" },
          peg$c27 = function(v) { return v; },
          peg$c28 = "exp(",
          peg$c29 = { type: "literal", value: "exp(", description: "\"exp(\"" },
          peg$c30 = ",",
          peg$c31 = { type: "literal", value: ",", description: "\",\"" },
          peg$c32 = function(b, e) { return "<apply> <power/> " + (b ? b[0] : "<exponentiale/>") + " " + e + " </apply>"; },
          peg$c33 = "log(",
          peg$c34 = { type: "literal", value: "log(", description: "\"log(\"" },
          peg$c35 = function(b, v) { return "<apply> <log/> " + (b ? "<logbase> " + b[0] + " </logbase> " : "") + v + " </apply>"; },
          peg$c36 = "log_",
          peg$c37 = { type: "literal", value: "log_", description: "\"log_\"" },
          peg$c38 = function(b, v) { return "<apply> <log/> <logbase> " + b + " </logbase> " + v + " </apply>"; },
          peg$c39 = "ln(",
          peg$c40 = { type: "literal", value: "ln(", description: "\"ln(\"" },
          peg$c41 = function(v) { return "<apply> <ln/> " + v + " </apply>"; },
          peg$c42 = "sin(",
          peg$c43 = { type: "literal", value: "sin(", description: "\"sin(\"" },
          peg$c44 = function(v) { return "<apply> <sin/> " + v + " </apply>"; },
          peg$c45 = "cos(",
          peg$c46 = { type: "literal", value: "cos(", description: "\"cos(\"" },
          peg$c47 = function(v) { return "<apply> <cos/> " + v + " </apply>"; },
          peg$c48 = "tan(",
          peg$c49 = { type: "literal", value: "tan(", description: "\"tan(\"" },
          peg$c50 = function(v) { return "<apply> <tan/> " + v + " </apply>"; },
          peg$c51 = "sec(",
          peg$c52 = { type: "literal", value: "sec(", description: "\"sec(\"" },
          peg$c53 = function(v) { return "<apply> <sec/> " + v + " </apply>"; },
          peg$c54 = "csc(",
          peg$c55 = { type: "literal", value: "csc(", description: "\"csc(\"" },
          peg$c56 = function(v) { return "<apply> <csc/> " + v + " </apply>"; },
          peg$c57 = "cot(",
          peg$c58 = { type: "literal", value: "cot(", description: "\"cot(\"" },
          peg$c59 = function(v) { return "<apply> <cot/> " + v + " </apply>"; },
          peg$c60 = "sqrt(",
          peg$c61 = { type: "literal", value: "sqrt(", description: "\"sqrt(\"" },
          peg$c62 = function(v) { return "<apply> <root/> " + v + " </apply>"; },
          peg$c63 = "root(",
          peg$c64 = { type: "literal", value: "root(", description: "\"root(\"" },
          peg$c65 = ")(",
          peg$c66 = { type: "literal", value: ")(", description: "\")(\"" },
          peg$c67 = function(n, v) { return "<apply> <root/> <degree> " + n + " </degree> " + v + " </apply>"; },
          peg$c68 = /^[xX]/,
          peg$c69 = { type: "class", value: "[xX]", description: "[xX]" },
          peg$c70 = function() { return "<ci> x </ci>"; },
          peg$c71 = "e",
          peg$c72 = { type: "literal", value: "e", description: "\"e\"" },
          peg$c73 = "E",
          peg$c74 = { type: "literal", value: "E", description: "\"E\"" },
          peg$c75 = function() { return "<exponentiale/>"; },
          peg$c76 = "Pi",
          peg$c77 = { type: "literal", value: "Pi", description: "\"Pi\"" },
          peg$c78 = "pi",
          peg$c79 = { type: "literal", value: "pi", description: "\"pi\"" },
          peg$c80 = function() { return "<pi/>"; },
          peg$c81 = function(s) { return "<cn> " + s + " </cn>"; },
          peg$c82 = function(f, s) { return f + (s ? s[0] + s[1]: ""); },
          peg$c83 = ".",
          peg$c84 = { type: "literal", value: ".", description: "\".\"" },
          peg$c85 = function(i, u) { return i + (u ? u[0] + u[1] : ""); },
          peg$c86 = function(s, u) { return (s ? s : "") + u; },
          peg$c87 = /^[0-9]/,
          peg$c88 = { type: "class", value: "[0-9]", description: "[0-9]" },
          peg$c89 = function(v) { return v.join(""); },
          peg$c90 = { type: "other", description: "whitespace" },
          peg$c91 = /^[ \t\n\r]/,
          peg$c92 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

          peg$currPos          = 0,
          peg$reportedPos      = 0,
          peg$cachedPos        = 0,
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
          peg$maxFailPos       = 0,
          peg$maxFailExpected  = [],
          peg$silentFails      = 0,

          peg$result;

      if ("startRule" in options) {
        if (!(options.startRule in peg$startRuleFunctions)) {
          throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
      }

      function text() {
        return input.substring(peg$reportedPos, peg$currPos);
      }

      function offset() {
        return peg$reportedPos;
      }

      function line() {
        return peg$computePosDetails(peg$reportedPos).line;
      }

      function column() {
        return peg$computePosDetails(peg$reportedPos).column;
      }

      function expected(description) {
        throw peg$buildException(
          null,
          [{ type: "other", description: description }],
          peg$reportedPos
        );
      }

      function error(message) {
        throw peg$buildException(message, null, peg$reportedPos);
      }

      function peg$computePosDetails(pos) {
        function advance(details, startPos, endPos) {
          var p, ch;

          for (p = startPos; p < endPos; p++) {
            ch = input.charAt(p);
            if (ch === "\n") {
              if (!details.seenCR) { details.line++; }
              details.column = 1;
              details.seenCR = false;
            } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
              details.line++;
              details.column = 1;
              details.seenCR = true;
            } else {
              details.column++;
              details.seenCR = false;
            }
          }
        }

        if (peg$cachedPos !== pos) {
          if (peg$cachedPos > pos) {
            peg$cachedPos = 0;
            peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
          }
          advance(peg$cachedPosDetails, peg$cachedPos, pos);
          peg$cachedPos = pos;
        }

        return peg$cachedPosDetails;
      }

      function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) { return; }

        if (peg$currPos > peg$maxFailPos) {
          peg$maxFailPos = peg$currPos;
          peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
      }

      function peg$buildException(message, expected, pos) {
        function cleanupExpected(expected) {
          var i = 1;

          expected.sort(function(a, b) {
            if (a.description < b.description) {
              return -1;
            } else if (a.description > b.description) {
              return 1;
            } else {
              return 0;
            }
          });

          while (i < expected.length) {
            if (expected[i - 1] === expected[i]) {
              expected.splice(i, 1);
            } else {
              i++;
            }
          }
        }

        function buildMessage(expected, found) {
          function stringEscape(s) {
            function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

            return s
              .replace(/\\/g,   '\\\\')
              .replace(/"/g,    '\\"')
              .replace(/\x08/g, '\\b')
              .replace(/\t/g,   '\\t')
              .replace(/\n/g,   '\\n')
              .replace(/\f/g,   '\\f')
              .replace(/\r/g,   '\\r')
              .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
              .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
              .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
              .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
          }

          var expectedDescs = new Array(expected.length),
              expectedDesc, foundDesc, i;

          for (i = 0; i < expected.length; i++) {
            expectedDescs[i] = expected[i].description;
          }

          expectedDesc = expected.length > 1
            ? expectedDescs.slice(0, -1).join(", ")
                + " or "
                + expectedDescs[expected.length - 1]
            : expectedDescs[0];

          foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

          return "Expected " + expectedDesc + " but " + foundDesc + " found.";
        }

        var posDetails = peg$computePosDetails(pos),
            found      = pos < input.length ? input.charAt(pos) : null;

        if (expected !== null) {
          cleanupExpected(expected);
        }

        return new SyntaxError(
          message !== null ? message : buildMessage(expected, found),
          expected,
          found,
          pos,
          posDetails.line,
          posDetails.column
        );
      }

      function peg$parsestart() {
        var s0, s1, s2;

        s0 = peg$currPos;
        s1 = peg$parseTerm_AddSub();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsews();
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c1(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseTerm_AddSub() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseTerm_MulDiv();
        if (s1 === peg$FAILED) {
          s1 = peg$c2;
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parseAdd();
          if (s3 === peg$FAILED) {
            s3 = peg$parseSub();
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseAdd();
            if (s3 === peg$FAILED) {
              s3 = peg$parseSub();
            }
          }
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c4(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseAdd() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 43) {
            s2 = peg$c5;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_MulDiv();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c7(s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseSub() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 45) {
            s2 = peg$c8;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_MulDiv();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c10(s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseTerm_MulDiv() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = peg$parseTerm_Exp();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parseMul();
          if (s3 === peg$FAILED) {
            s3 = peg$parseDiv();
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseMul();
            if (s3 === peg$FAILED) {
              s3 = peg$parseDiv();
            }
          }
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c11(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseMul() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 42) {
            s2 = peg$c12;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_Exp();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c14(s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseDiv() {
        var s0, s1, s2, s3, s4;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 47) {
            s2 = peg$c15;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_Exp();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c17(s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseTerm_Exp() {
        var s0, s1, s2, s3;

        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 45) {
          s1 = peg$c8;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s1 === peg$FAILED) {
          s1 = peg$c2;
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseTerm_Parens();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseExp();
            if (s3 === peg$FAILED) {
              s3 = peg$c2;
            }
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c18(s1, s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseExp() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 94) {
            s2 = peg$c19;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 45) {
                s4 = peg$c8;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s4 === peg$FAILED) {
                s4 = peg$c2;
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parsews();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseTerm_Parens();
                  if (s6 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c21(s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseTerm_Parens() {
        var s0, s1;

        s0 = peg$currPos;
        s1 = peg$parseTerm_Functions();
        if (s1 === peg$FAILED) {
          s1 = peg$parseParens();
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c22(s1);
        }
        s0 = s1;

        return s0;
      }

      function peg$parseParens() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = peg$parsews();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 40) {
            s2 = peg$c23;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parsews();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_AddSub();
              if (s4 !== peg$FAILED) {
                s5 = peg$parsews();
                if (s5 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s6 = peg$c25;
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c26); }
                  }
                  if (s6 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c27(s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parseTerm_Functions() {
        var s0, s1;

        s0 = peg$currPos;
        s1 = peg$parsePrimary();
        if (s1 === peg$FAILED) {
          s1 = peg$parseFunctions();
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c22(s1);
        }
        s0 = s1;

        return s0;
      }

      function peg$parseFunctions() {
        var s0;

        s0 = peg$parsepower();
        if (s0 === peg$FAILED) {
          s0 = peg$parsetrig();
          if (s0 === peg$FAILED) {
            s0 = peg$parseroot();
          }
        }

        return s0;
      }

      function peg$parsepower() {
        var s0;

        s0 = peg$parseexp();
        if (s0 === peg$FAILED) {
          s0 = peg$parselog();
          if (s0 === peg$FAILED) {
            s0 = peg$parseln();
          }
        }

        return s0;
      }

      function peg$parseexp() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c28) {
          s1 = peg$c28;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c29); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsews();
          if (s2 !== peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parseTerm_AddSub();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsews();
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 44) {
                  s6 = peg$c30;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c31); }
                }
                if (s6 !== peg$FAILED) {
                  s4 = [s4, s5, s6];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$c0;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
            if (s3 === peg$FAILED) {
              s3 = peg$c2;
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_AddSub();
              if (s4 !== peg$FAILED) {
                s5 = peg$parsews();
                if (s5 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s6 = peg$c25;
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c26); }
                  }
                  if (s6 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c32(s3, s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parselog() {
        var s0;

        s0 = peg$parselogParameter();
        if (s0 === peg$FAILED) {
          s0 = peg$parselog_();
        }

        return s0;
      }

      function peg$parselogParameter() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c33) {
          s1 = peg$c33;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c34); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsews();
          if (s2 !== peg$FAILED) {
            s3 = peg$currPos;
            s4 = peg$parseNumber();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsews();
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 44) {
                  s6 = peg$c30;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c31); }
                }
                if (s6 !== peg$FAILED) {
                  s4 = [s4, s5, s6];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$c0;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c0;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
            if (s3 === peg$FAILED) {
              s3 = peg$c2;
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parseTerm_AddSub();
              if (s4 !== peg$FAILED) {
                s5 = peg$parsews();
                if (s5 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 41) {
                    s6 = peg$c25;
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c26); }
                  }
                  if (s6 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c35(s3, s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }

        return s0;
      }

      function peg$parselog_() {
        var s0, s1, s2, s3, s4, s5, s6, s7;
